# solarproof

./: .gitignore  .gitleaks.toml  .license-checker.json  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  cliff.toml  docker-compose.yml  openapi.yaml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  upptime.yml
.zap/: rules.tsv
apps/contracts/: .cargo-mutants.toml  Cargo.toml  audit.toml
apps/contracts/audit_registry/: Cargo.toml
apps/contracts/audit_registry/src/: lib.rs
apps/contracts/community_governance/: Cargo.toml
apps/contracts/community_governance/src/: lib.rs
apps/contracts/community_governance/tests/: lifecycle.rs  upgrade.rs
apps/contracts/energy_token/: Cargo.toml
apps/contracts/energy_token/src/: lib.rs
apps/contracts/fuzz/: Cargo.toml
apps/contracts/fuzz/corpus/fuzz_mint/: amount_max
apps/contracts/fuzz/corpus/fuzz_vote/: 32_voters_mixed
apps/contracts/fuzz/fuzz_targets/: fuzz_anchor.rs  fuzz_mint.rs  fuzz_vote.rs
apps/contracts/multisig_admin/: Cargo.toml
apps/contracts/multisig_admin/src/: lib.rs
apps/contracts/multisig_admin/test_snapshots/tests/: test_approve_after_execution_panics.1.json  test_approve_by_non_signer_panics.1.json  test_double_approval_panics.1.json  test_double_initialize_panics.1.json  test_execute_rotate_before_threshold_panics.1.json  test_initialize_stores_signers_and_threshold.1.json  test_multiple_ops_independent.1.json  test_propose_by_non_signer_panics.1.json  test_propose_creates_op_and_auto_approves_proposer.1.json  test_rotate_by_non_signer_panics.1.json  test_rotate_signers_requires_threshold.1.json  test_second_approval_executes_op.1.json  test_third_signer_approval_also_executes.1.json  test_threshold_one_executes_on_propose.1.json
apps/contracts/proptest/: Cargo.toml
apps/contracts/proptest/src/: lib.rs
docs/: API.md  AUDIT_SCOPE.md  (+24 more)
(+252 files in other folders)
