[workspace]
resolver = "2"
members = [
    "energy_token",
    "audit_registry",
    "community_governance",
]

[workspace.dependencies]
soroban-sdk = { version = "23.1.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
panic = "abort"
codegen-units = 1
lto = true
