[package]
name = "fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
soroban-sdk = { version = "23.1.0", features = ["testutils"] }
energy-token = { path = "../energy_token" }
audit-registry = { path = "../audit_registry" }
community-governance = { path = "../community_governance" }

# Prevent this from being included in the workspace
[workspace]

[[bin]]
name = "fuzz_mint"
path = "fuzz_targets/fuzz_mint.rs"
test = false
doc = false

[[bin]]
name = "fuzz_anchor"
path = "fuzz_targets/fuzz_anchor.rs"
test = false
doc = false

[[bin]]
name = "fuzz_vote"
path = "fuzz_targets/fuzz_vote.rs"
test = false
doc = false
