[package]
name = "contracts-proptest"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
proptest = "1.6.0"
soroban-sdk = { version = "23.1.0", features = ["testutils"] }
energy-token = { path = "../energy_token" }
community-governance = { path = "../community_governance" }

# Excluded from the main workspace to keep it isolated (like the fuzz crate).
[workspace]
